# investment-lab

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  warmup_result.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: health.py
app/core/: config.py  dependencies.py  logging.py
app/db/: base.py  candles.py  init_db.py  session.py  types.py  upsert.py
app/models/: __init__.py  backtest_result.py  backtest_run.py  indicator_cache.py  instrument.py  portfolio_snapshot.py  price_candle.py  signal.py
app/schemas/: backtest.py  common.py  copilot.py  copilot_comparative_validation.py  copilot_forward_validation_pilot.py  copilot_journal.py  copilot_monitoring.py  copilot_outcomes.py  copilot_paper_portfolio_nav.py  copilot_scorecard.py  copilot_shadow_portfolio.py  indicator.py  instrument.py  portfolio.py  price_candle.py  screener.py  screener_backtest.py  signal.py
app/services/: copilot.py  copilot_comparative_validation.py  copilot_forward_validation_pilot.py  copilot_journal.py  copilot_monitoring.py  copilot_outcomes.py  copilot_paper_portfolio_nav.py  copilot_personalization.py  copilot_scorecard.py  copilot_shadow_portfolio.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
scripts/: download_real_prices.py  download_real_prices_flat.py  import_real_prices.py  reset_and_reimport_real_prices.py  seed_prices.py
tests/: conftest.py
tests/fixtures/: sample_prices.csv
tests/integration/: test_api_copilot.py  (+10 more)
(+93 files in other folders)
